[package]
name = "picocadrs"
version = "1.0.2"
edition = "2021"
description = "Library for working with picoCAD saves."
readme = "README.md"
homepage = "https://github.com/mzntori/picocadrs"
repository = "https://github.com/mzntori/picocadrs"
documentation = "https://docs.rs/picocadrs/latest/"
license = "MIT"
keywords = ["picoCAD", "pico8"]
categories = ["data-structures", "graphics", "parsing"]
exclude = [".github/workflows/rust.yml"]

[dependencies]
directories = "5.0.1"
rlua = "0.19.4"
thiserror = "1.0.58"