[package]
name = "picocadrs"
version = "1.1.0"
edition = "2021"
description = "Library for working with picoCAD saves."
readme = "README.md"
homepage = "https://github.com/mzntori/picocadrs"
repository = "https://github.com/mzntori/picocadrs"
documentation = "https://docs.rs/picocadrs/latest/"
license = "MIT"
keywords = ["picoCAD", "pico8"]
categories = ["data-structures", "graphics", "parsing"]
exclude = [".github/workflows/rust.yml"]

[dependencies]
directories = "5.0.1"
rlua = "0.19.4"
svg = { version = "0.18.0", optional = true }
thiserror = "1.0.58"

[features]
svg = ["dep:svg"]
